Fix for menu items not spacing properly.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -349,6 +349,8 @@ ul.navbar-nav {
 	width:100%;
 	margin-right:0;
 	margin-left:0;
+	display:flex;
+	justify-content:space-between;
 }
 ul.navbar-nav li:first-child{
 	text-align:left;
@@ -376,7 +378,8 @@ li.nav-item {
 	color: #000000;
 	display: inline-block;
 	font-family: cacregular;
-	width:33%
+	/*width:33%*/
+	width:auto;
 }
 
 li.nav-item a {
